Add support for mutation testing using major